# KVS

./: .gitignore  CMakeLists.txt  DSS.tex  README.md  analysis.tex  architecture.tex
benchmark/: CMakeLists.txt  benchAll.cpp
include/: KeyAction.hpp  KeyValue.hpp  KeyValueStore.hpp  KeyValueStoreImpl.hpp  LazyUnalignedArray.hpp  LazyUnalignedIntArray.hpp  LazyUnalignedKeyArray.hpp  LimitedUnsignedInt.hpp  Log.hpp  Repository.hpp  RepositoryFactory.hpp  SearchResult.hpp  SerializerSized.hpp  Storage.hpp  TableBlock.hpp  TableBlockSerializer.hpp  TypedRepository.hpp  TypedRepositoryFactory.hpp  ValueSerializer.hpp
include/impl/: KeyValueStoreImpl.hpp
include/index/: BloomFilter.hpp  Filter.hpp  Index.hpp  IndexImpl.hpp  TableBlock.hpp
include/index/impl/: BloomFilterImpl.hpp  EntryIteratorImpl.hpp  IndexImpl.hpp
include/log/: FreePositionsManager.hpp  Log.hpp
include/repositories/: RepositoryFactory.hpp  TypedRepository.hpp  TypedRepositoryFactory.hpp
include/serialization/: Serializer.hpp  TableBlockSerializer.hpp  ValueSerializer.hpp
include/storage/: Storage.hpp
include/unalignedArray/: UnalignedArray.hpp  UnalignedIntArray.hpp  UnalignedKeyArray.hpp
include/util/: KeyAction.hpp  LimitedUnsignedInt.hpp  SearchResult.hpp
include/xxh/: XXHashWrapper.hpp  XXHashWrapperImpl.hpp
lib/: xxhash.h
src/: Main.cpp  Repository.cpp  RepositoryFactory.cpp
src/repositories/: Repository.cpp  RepositoryFactory.cpp
test/: CMakeLists.txt  StubFilter.hpp  TestUtils.hpp  TestUtilsImpl.hpp  testBloomFilter.cpp  testE2E.cpp  testFreePositionsManager.cpp  testIndex.cpp  testLazyUnalignedIntArray.cpp  testLog.cpp  testStorage.cpp  testTypedRepository.cpp
